# agent-controller

./: .dockerignore  .gitignore  README.md  package-lock.json  package.json  skaffold.yaml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  publish-charts.yml  publish.yml  release.yml  validate-crds.yml
apps/agent-orchestrator/: .env.example  Dockerfile  README.md  package.json  run.sh  tsconfig.json
apps/claude-code-swe-agent/: Dockerfile  package.json
apps/copilot-swe-agent/: Dockerfile  agent.yaml  package.json
apps/integration-gateway/: .env.example  Dockerfile  README.md  package.json
apps/opencode-swe-agent/: Dockerfile  agent.yaml  package.json  tsconfig.json
charts/agent-controller/: .helmignore  Chart.yaml  README.md  values-minikube-demo.yaml  values-production.yaml  values.yaml
charts/agent-orchestrator/: .helmignore  Chart.yaml  README.md  values-minikube-demo.yaml  values.yaml
charts/community-components/: Chart.yaml  README.md  values-minikube-demo.yaml  values-production.yaml  values.yaml
charts/controller-agent/: Chart.yaml  README.md  values-minikube-demo.yaml  values.yaml
charts/recipe-agent/: Chart.yaml  README.md  values-minikube-demo.yaml  values.yaml
charts/tool-controller/: Chart.yaml  values-minikube-demo.yaml
controllers/core-controller/: AGENTS.md  (+4 more)
docs/: integrations-gateway.md  kubectl-ui-guide.md  messaging.md  orchestrator.md  security.md
scripts/: dev-up.sh  sync-manifest-docs.py
tools-local/http-get-python/: pyproject.toml
tools-local/http-get-python/http_get/: __init__.py  __main__.py
(+631 files in other folders)
