[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "controller-agent-http-get"
version = "0.1.0"
description = "Reference LocalTool (ADR 0013), python runtime: URL on stdin, HTTP GET behind an SSRF guard, stdio-ABI envelope on stdout."
requires-python = ">=3.10"

# The executor sidecar runs `python -m http_get`, so the importable module name
# is `http_get` (entry via __main__.py).
[tool.setuptools]
packages = ["http_get"]
